# sudoku-heuristic-solver

./: CMakeLists.txt  test_correctness.py  test_speed.py  test_sudoku.py
sudoku/: CMakeLists.txt  sample_sudoku.txt  sudoku.c  sudoku.cpp  sudoku.h
sudoku/parser/: parser.c  parser.h
sudoku/solver/: sudoku_heuristics.c  sudoku_heuristics.h  sudoku_solver_heuristics.c  sudoku_solver_heuristics.h  sudoku_solver_simple.c  sudoku_solver_simple.h
sudoku/sudoku-grid/: sudoku_answer.h  sudoku_grid.c  sudoku_grid.h
sudoku/utils/: sudoku_iterator.c  sudoku_iterator.h  timer.cpp  timer.h  utils.c  utils.h
